--- a/.eslintrc
+++ b/.eslintrc
@@ -29,24 +29,24 @@
     "jsx": true
   },
   "rules": {
-    "block-scoped-var": 2,           // http://eslint.org/docs/rules/block-scoped-var
+    //"block-scoped-var": 2,           // http://eslint.org/docs/rules/block-scoped-var
     // React
-    "react/display-name": 0,
-    "react/jsx-boolean-value": 1,
-    "react/jsx-no-undef": 2,
-    "react/jsx-sort-prop-types": 0,
-    "react/jsx-sort-props": 0,
-    "react/jsx-uses-react": 1,
-    "react/jsx-uses-vars": 1,
-    "react/no-did-mount-set-state": [2, "allow-in-func"],
-    "react/no-did-update-set-state": 2,
-    "react/no-multi-comp": 2,
-    "react/no-unknown-property": 2,
-    "react/prop-types": 2,
-    "react/react-in-jsx-scope": 2,
-    "react/self-closing-comp": 2,
-    "react/sort-comp": 2,
-    "react/wrap-multilines": 2
+//    "react/display-name": 0,
+//    "react/jsx-boolean-value": 1,
+//    "react/jsx-no-undef": 2,
+//    "react/jsx-sort-prop-types": 0,
+//    "react/jsx-sort-props": 0,
+//    "react/jsx-uses-react": 1,
+//    "react/jsx-uses-vars": 1,
+//    "react/no-did-mount-set-state": [2, "allow-in-func"],
+//    "react/no-did-update-set-state": 2,
+//    "react/no-multi-comp": 2,
+//    "react/no-unknown-property": 2,
+//    "react/prop-types": 2,
+//    "react/react-in-jsx-scope": 2,
+//    "react/self-closing-comp": 2,
+//    "react/sort-comp": 2,
+//    "react/wrap-multilines": 2
   },
   "plugins": [
     "react"
