--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "author": "Gunjan Jain",
   "scripts": {
     "test": "",
-    "start": "cross-env NODE_ENV=development node server",
-    "prod": "cross-env NODE_ENV=production node server",
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
-    "build:prod": "npm-run-all --parallel build prod",
-    "eslint": "eslint .",
-    "jscs": "jscs ."
+    "start": "cross-env NODE_ENV=dev node server --progress",
+    "prod": "cross-env NODE_ENV=prod node server",
+    "build": "cross-env NODE_ENV=prod webpack --env=prod --progress",
+    "build:prod": "npm-run-all --parallel build prod"
   },
   "dependencies": {
     "babel-cli": "^6.4.0",
     "babel-core": "^6.22.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.17.2",
     "copy-webpack-plugin": "^4.0.1",
     "file-loader": "^0.11.2",
@@ -29,9 +29,13 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-infinite-scroll-component": "^2.4.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.15.6",
     "superagent": "^3.5.2",
-    "url-loader": "^0.5.9"
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
@@ -41,7 +45,6 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-react-hmre": "^1.1.0",
-    "babel-preset-stage-0": "^6.3.13",
     "copy-webpack-plugin": "^4.0.1",
     "cpy-cli": "^1.0.1",
     "cross-env": "^1.0.7",
@@ -61,7 +64,7 @@
     "rimraf": "^2.4.3",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.12.4",
-    "webpack": "~2.1.0-beta.22",
+    "webpack": "^3.4.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.2.0",
     "webpack-merge": "^4.1.0"
